--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -1,5 +1,5 @@
 {
-  "enable_admin_logging": true,
+  "enable_admin_logging": false,
   "qldb_ledger_name": "audit-logs",
   "qldb_table_name": "logs"
 }
