--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,10 @@ services:
   localstack:
     image: localstack/localstack:1.3.0
     ports:
-      - "127.0.0.1:4566:4566"
+      - "127.0.0.1:5001:5001"
     volumes:
       - "./src/main/resources/localstack/init-aws.sh:/etc/localstack/init/ready.d/init-aws.sh"
       - "./src/main/resources/localstack/s3:/s3"
+    environment:
+      - EDGE_PORT=5001
+
