--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -24,5 +24,6 @@
   "site_key_expires_after_seconds": 90000,
   "salt_snapshot_activates_in_seconds": 180,
   "salt_snapshot_expires_after_seconds": 180000,
-  "is_auth_disabled": true
+  "is_auth_disabled": true,
+  "filter_key_over_cut_off_days": false
 }
