--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -20,9 +20,13 @@
   "admin_key_prefix": "ADINT",
   "master_key_activates_in_seconds": 30,
   "master_key_expires_after_seconds": 60000,
+  "master_key_rotation_cut_off_days": 37,
   "site_key_activates_in_seconds": 60,
   "site_key_expires_after_seconds": 90000,
+  "site_key_rotation_cut_off_days": 37,
+  "refresh_key_rotation_cut_off_days": 37,
   "salt_snapshot_activates_in_seconds": 180,
   "salt_snapshot_expires_after_seconds": 180000,
-  "is_auth_disabled": true
+  "is_auth_disabled": true,
+  "filter_key_over_cut_off_days": false
 }
