--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <vertx.version>3.9.4</vertx.version>
+        <vertx.version>4.3.8</vertx.version>
         <vertx-maven-plugin.version>1.0.22</vertx-maven-plugin.version>
         <vertx.verticle>com.uid2.admin.vertx.AdminVerticle</vertx.verticle>
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>1.20.1</uid2-shared.version>
+        <uid2-shared.version>2.0.1-SNAPSHOT</uid2-shared.version>
         <image.version>${project.version}</image.version>
     </properties>
     <dependencies>
