--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -24,5 +24,6 @@
   "site_key_expires_after_seconds": 90000,
   "salt_snapshot_activates_in_seconds": 180,
   "salt_snapshot_expires_after_seconds": 180000,
-  "is_auth_disabled": true
+  "is_auth_disabled": false,
+  "oauth2_callback_url": "http://localhost:8089/oauth2-callback"
 }
