--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -25,5 +25,7 @@
   "salt_snapshot_activates_in_seconds": 180,
   "salt_snapshot_expires_after_seconds": 180000,
   "is_auth_disabled": false,
-  "oauth2_callback_url": "http://localhost:8089/oauth2-callback"
+  "oauth2_callback_url": "http://localhost:8089/oauth2-callback",
+  "github_client_key": "generate client key",
+  "github_client_secret": "generate client secret"
 }
