--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -27,7 +27,9 @@
   "refresh_key_rotation_cut_off_days": 37,
   "salt_snapshot_activates_in_seconds": 180,
   "salt_snapshot_expires_after_seconds": 180000,
-  "is_auth_disabled": false,
+  "is_auth_disabled": true,
   "oauth2_callback_url": "http://localhost:8089/oauth2-callback",
-  "filter_key_over_cut_off_days": false
+  "github_client_key": "generate client key",
+  "github_client_secret": "generate client secret",
+  "filter_key_over_cut_off_days": true
 }
