--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,22 @@
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>2.1.0</uid2-shared.version>
+        <uid2-shared.version>2.3.12-SNAPSHOT</uid2-shared.version>
         <image.version>${project.version}</image.version>
     </properties>
-
+      <repositories>
+        <repository>
+          <id>maven-snapshots</id>
+          <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+          <layout>default</layout>
+            <releases>
+              <enabled>false</enabled>
+            </releases>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
     <dependencies>
         <dependency>
             <groupId>com.uid2</groupId>
@@ -70,6 +82,11 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.14.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.12.7</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
