Updated severity level for scanning

--- a/.github/workflows/validate-image.yaml
+++ b/.github/workflows/validate-image.yaml
@@ -4,11 +4,11 @@ on:
       failure_severity:
         description: 'Must be one of CRITICAL, HIGH, MEDIUM'
         required: false
-        default: 'CRITICAL'
+        default: 'HIGH'
       fail_on_error:
         description: 'If true, will fail the build if vulnerabilities are found'
         required: true
-        default: 'false'
+        default: 'true'
   schedule:
     - cron: '0 20 * * *' #every day at 20:00
 
