Using string 'false'

--- a/.github/workflows/validate-image.yaml
+++ b/.github/workflows/validate-image.yaml
@@ -18,14 +18,14 @@ jobs:
     uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-validate-image.yaml@main
     with: 
       failure_severity: ${{ inputs.failure_severity || 'CRITICAL'}}
-      fail_on_error: ${{ inputs.fail_on_error || false }}
+      fail_on_error: ${{ inputs.fail_on_error || 'false' }}
       cloud_provider: 'default'
     secrets: inherit
   build-publish-docker-aws:
     uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-validate-image.yaml@main
     with: 
       failure_severity: ${{ inputs.failure_severity || 'CRITICAL'}}
-      fail_on_error: ${{ inputs.fail_on_error || false }}
+      fail_on_error: ${{ inputs.fail_on_error || 'false' }}
       cloud_provider: 'aws'
     secrets: inherit
     needs: [build-publish-docker-default]
@@ -33,7 +33,7 @@ jobs:
     uses: IABTechLab/uid2-shared-actions/.github/workflows/shared-validate-image.yaml@main
     with: 
       failure_severity: ${{ inputs.failure_severity || 'CRITICAL'}}
-      fail_on_error: ${{ inputs.fail_on_error || false }}
+      fail_on_error: ${{ inputs.fail_on_error || 'false' }}
       cloud_provider: 'gcp'
     secrets: inherit
     needs: [build-publish-docker-aws]
