--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -15,9 +15,9 @@
   "partners_metadata_path": "partners/metadata.json",
   "aws_access_key_id": "no access key needed for test",
   "aws_secret_access_key": "no secret key needed for test",
-  "client_key_prefix": "INTEG",
-  "operator_key_prefix": "OPINT",
-  "admin_key_prefix": "ADINT",
+  "client_key_prefix": "LOCAL",
+  "operator_key_prefix": "OPLCL",
+  "admin_key_prefix": "ADLCL",
   "master_key_activates_in_seconds": 30,
   "master_key_expires_after_seconds": 60000,
   "site_key_activates_in_seconds": 60,
