--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -15,9 +15,9 @@
   "partners_metadata_path": "partners/metadata.json",
   "aws_access_key_id": "no access key needed for test",
   "aws_secret_access_key": "no secret key needed for test",
-  "client_key_prefix": "LOCAL",
-  "operator_key_prefix": "OPLCL",
-  "admin_key_prefix": "ADLCL",
+  "client_key_prefix": "UID2-C-L-",
+  "operator_key_prefix": "UID2-O-L-",
+  "admin_key_prefix": "UID2-A-L-",
   "master_key_activates_in_seconds": 30,
   "master_key_expires_after_seconds": 60000,
   "master_key_rotation_cut_off_days": 37,
