Updated Docker config

--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -13,6 +13,8 @@
   "operators_metadata_path": "operators/metadata.json",
   "enclaves_metadata_path": "enclaves/metadata.json",
   "partners_metadata_path": "partners/metadata.json",
+  "keysets_metadata_path": "keysets/metadata.json",
+  "keyset_keys_metadata_path": "keyset_keys/metadata.json",
   "aws_access_key_id": "no access key needed for test",
   "aws_secret_access_key": "no secret key needed for test",
   "client_key_prefix": "LOCAL",
