--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>2.10.0-726a7a3447</uid2-shared.version>
+        <uid2-shared.version>3.2.0-SNAPSHOT</uid2-shared.version>
         <image.version>${project.version}</image.version>
     </properties>
       <repositories>
@@ -87,6 +87,11 @@
             <groupId>com.github.loki4j</groupId>
             <artifactId>loki-logback-appender</artifactId>
             <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.1.7</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
