--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -33,5 +33,6 @@
   "oauth2_callback_url": "http://localhost:8089/oauth2-callback",
   "github_client_id": "generate client id",
   "github_client_secret": "generate client secret",
-  "filter_key_over_cut_off_days": true
+  "filter_key_over_cut_off_days": true,
+  "enable_keysets": false
 }
