--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -20,6 +20,8 @@
   "client_key_prefix": "LOCAL",
   "operator_key_prefix": "OPLCL",
   "admin_key_prefix": "ADLCL",
+  "client_side_keypair_public_prefix": "UID2-X-T-",
+  "client_side_keypair_private_prefix": "UID2-Y-T-",
   "master_key_activates_in_seconds": 30,
   "master_key_expires_after_seconds": 60000,
   "site_key_activates_in_seconds": 60,
