--- a/trivy-secret.yaml
+++ b/trivy-secret.yaml
@@ -36,7 +36,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-C-T
-    regex: UID2-C-T-[0-9]*-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: UID2-C-T-[0-9]*-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: uid2-client-key-integ
     category: uid2
