--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -6,6 +6,7 @@
   "admins_metadata_path": "admins/metadata.json",
   "sites_metadata_path": "sites/metadata.json",
   "clients_metadata_path": "clients/metadata.json",
+  "client_side_keypairs_metadata_path": "client_side_keypairs/metadata.json",
   "keys_metadata_path": "keys/metadata.json",
   "keys_acl_metadata_path": "keys_acl/metadata.json",
   "salts_metadata_path": "salts/metadata.json",
