Updated E2E Docker config

--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -29,5 +29,6 @@
   "is_auth_disabled": true,
   "oauth2_callback_url": "http://localhost:8089/oauth2-callback",
   "github_client_id": "generate client id",
-  "github_client_secret": "generate client secret"
+  "github_client_secret": "generate client secret",
+  "enable_keysets": false
 }
