--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -34,5 +34,5 @@
   "github_client_id": "generate client id",
   "github_client_secret": "generate client secret",
   "filter_key_over_cut_off_days": true,
-  "enable_keysets": false
+  "enable_keysets": true
 }
