--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       </repositories>
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.2-jre</version>
+        </dependency>
+        <dependency>
             <groupId>com.uid2</groupId>
             <artifactId>uid2-shared</artifactId>
             <version>${uid2-shared.version}</version>
