--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>4.3.5-SNAPSHOT</uid2-shared.version>
+        <uid2-shared.version>4.4.0-4478809f4c</uid2-shared.version>
         <image.version>${project.version}</image.version>
     </properties>
       <repositories>
