--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>4.1.18-beaf2cbae3</uid2-shared.version>
+        <uid2-shared.version>4.2.0-06040ccf2e</uid2-shared.version>
         <image.version>${project.version}</image.version>
     </properties>
       <repositories>
@@ -33,6 +33,11 @@
         </repository>
       </repositories>
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.2-jre</version>
+        </dependency>
         <dependency>
             <groupId>com.uid2</groupId>
             <artifactId>uid2-shared</artifactId>
