Update secret scanning to include site ID in prefix

--- a/trivy-secret.yaml
+++ b/trivy-secret.yaml
@@ -44,7 +44,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-C-I
-    regex: UID2-C-I-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: UID2-C-I-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: uid2-client-key-prod
     category: uid2
