--- a/trivy-secret.yaml
+++ b/trivy-secret.yaml
@@ -83,6 +83,34 @@ rules:
     regex: UID2-O-P-[0-9]*-(?P<secret>.{6}\..{38})
     secret-group-name: secret
 
+  ########################################
+  # UID2 Client Side Keypair Private Key #
+  ########################################
+  - id: uid2-client-side-keypair-private-key-test
+    category: uid2
+    title: UID2 - Client Side Keypair Private Key - Test
+    severity: CRITICAL
+    keywords:
+      - UID2-Y-T
+    regex: UID2-Y-T-[0-9]*-(?P<secret>.{92})
+    secret-group-name: secret
+  - id: uid2-client-side-keypair-private-key-integ
+    category: uid2
+    title: UID2 - Client Side Keypair Private Key - Integ
+    severity: CRITICAL
+    keywords:
+      - UID2-Y-I
+    regex: UID2-Y-I-[0-9]*-(?P<secret>.{92})
+    secret-group-name: secret
+  - id: uid2-client-side-keypair-private-key-prod
+    category: uid2
+    title: UID2 - Client Side Keypair Private Key - Prod
+    severity: CRITICAL
+    keywords:
+      - UID2-Y-P
+    regex: UID2-Y-P-[0-9]*-(?P<secret>.{92})
+    secret-group-name: secret
+
   ##################
   # EUID Admin Key #
   ##################
@@ -165,6 +193,34 @@ rules:
     keywords:
       - EUID-O-P
     regex: EUID-O-P-[0-9]*-(?P<secret>.{6}\..{38})
+    secret-group-name: secret
+
+  ########################################
+  # EUID Client Side Keypair Private Key #
+  ########################################
+  - id: euid-client-side-keypair-private-key-test
+    category: euid
+    title: EUID - Client Side Keypair Private Key - Test
+    severity: CRITICAL
+    keywords:
+      - EUID-Y-T
+    regex: EUID-Y-T-[0-9]*-(?P<secret>.{92})
+    secret-group-name: secret
+  - id: euid-client-side-keypair-private-key-integ
+    category: euid
+    title: EUID - Client Side Keypair Private Key - Integ
+    severity: CRITICAL
+    keywords:
+      - EUID-Y-I
+    regex: EUID-Y-I-[0-9]*-(?P<secret>.{92})
+    secret-group-name: secret
+  - id: euid-client-side-keypair-private-key-prod
+    category: euid
+    title: EUID - Client Side Keypair Private Key - Prod
+    severity: CRITICAL
+    keywords:
+      - EUID-Y-P
+    regex: EUID-Y-P-[0-9]*-(?P<secret>.{92})
     secret-group-name: secret
 
 disable-allow-rules:
