implemented services and started tests

--- a/conf/local-config.json
+++ b/conf/local-config.json
@@ -8,6 +8,8 @@
   "clients_metadata_path": "clients/metadata.json",
   "keys_metadata_path": "keys/metadata.json",
   "client_side_keypairs_metadata_path": "client_side_keypairs/metadata.json",
+  "services_metadata_path": "services/metadata.json",
+  "service_links_metadata_path": "service_links/metadata.json",
   "keys_acl_metadata_path": "keys_acl/metadata.json",
   "salts_metadata_path": "salts/metadata.json",
   "salt_snapshot_location_prefix": "salts/salts.txt.",
