--- a/trivy-secret.yaml
+++ b/trivy-secret.yaml
@@ -36,7 +36,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-C-T
-    regex: UID2-C-T-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: UID2-C-T-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: uid2-client-key-integ
     category: uid2
@@ -44,7 +44,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-C-I
-    regex: UID2-C-I-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: UID2-C-I-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: uid2-client-key-prod
     category: uid2
@@ -52,7 +52,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-C-P
-    regex: UID2-C-P-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: UID2-C-P-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
 
   #####################
@@ -64,7 +64,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-O-T
-    regex: UID2-O-T-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: UID2-O-T-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: uid2-operator-key-integ
     category: uid2
@@ -72,7 +72,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-O-I
-    regex: UID2-O-I-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: UID2-O-I-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: uid2-operator-key-prod
     category: uid2
@@ -80,7 +80,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-O-P
-    regex: UID2-O-P-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: UID2-O-P-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
 
   ##################
@@ -120,7 +120,7 @@ rules:
     severity: CRITICAL
     keywords:
       - EUID-C-T
-    regex: EUID-C-T-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: EUID-C-T-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: euid-client-key-integ
     category: euid
@@ -128,7 +128,7 @@ rules:
     severity: CRITICAL
     keywords:
       - EUID-C-I
-    regex: EUID-C-I-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: EUID-C-I-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: euid-client-key-prod
     category: euid
@@ -136,7 +136,7 @@ rules:
     severity: CRITICAL
     keywords:
       - EUID-C-P
-    regex: EUID-C-P-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: EUID-C-P-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
 
   #####################
@@ -148,7 +148,7 @@ rules:
     severity: CRITICAL
     keywords:
       - EUID-O-T
-    regex: EUID-O-T-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: EUID-O-T-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: euid-operator-key-integ
     category: euid
@@ -156,7 +156,7 @@ rules:
     severity: CRITICAL
     keywords:
       - EUID-O-I
-    regex: EUID-O-I-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: EUID-O-I-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
   - id: euid-operator-key-prod
     category: euid
@@ -164,7 +164,7 @@ rules:
     severity: CRITICAL
     keywords:
       - EUID-O-P
-    regex: EUID-O-P-[0-9]*-(?P<secret>.{6}\..{38})
+    regex: EUID-O-P-[0-9]+-(?P<secret>.{6}\..{38})
     secret-group-name: secret
 
 disable-allow-rules:
