--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -33,5 +33,5 @@
   "oauth2_callback_url": "http://localhost:8089/oauth2-callback",
   "github_client_id": "generate client id",
   "github_client_secret": "generate client secret",
-  "enable_keysets": false
+  "enable_keysets": true
 }
