--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -7,6 +7,8 @@
   "sites_metadata_path": "sites/metadata.json",
   "clients_metadata_path": "clients/metadata.json",
   "client_side_keypairs_metadata_path": "client_side_keypairs/metadata.json",
+  "services_metadata_path": "services/metadata.json",
+  "service_links_metadata_path": "service_links/metadata.json",
   "keys_metadata_path": "keys/metadata.json",
   "keys_acl_metadata_path": "keys_acl/metadata.json",
   "salts_metadata_path": "salts/metadata.json",
