--- a/trivy-secret.yaml
+++ b/trivy-secret.yaml
@@ -92,7 +92,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-Y-T
-    regex: UID2-Y-T-[0-9]*-(?P<secret>.{92})
+    regex: UID2-Y-T-(?P<secret>.{92})
     secret-group-name: secret
   - id: uid2-client-side-keypair-private-key-integ
     category: uid2
@@ -100,7 +100,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-Y-I
-    regex: UID2-Y-I-[0-9]*-(?P<secret>.{92})
+    regex: UID2-Y-I-(?P<secret>.{92})
     secret-group-name: secret
   - id: uid2-client-side-keypair-private-key-prod
     category: uid2
@@ -108,7 +108,7 @@ rules:
     severity: CRITICAL
     keywords:
       - UID2-Y-P
-    regex: UID2-Y-P-[0-9]*-(?P<secret>.{92})
+    regex: UID2-Y-P-(?P<secret>.{92})
     secret-group-name: secret
 
   ##################
