--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -7,6 +7,8 @@
   "sites_metadata_path": "sites/metadata.json",
   "clients_metadata_path": "clients/metadata.json",
   "client_side_keypairs_metadata_path": "client_side_keypairs/metadata.json",
+  "services_metadata_path": "services/metadata.json",
+  "service_links_metadata_path": "service_links/metadata.json",
   "keys_metadata_path": "keys/metadata.json",
   "keys_acl_metadata_path": "keys_acl/metadata.json",
   "salts_metadata_path": "salts/metadata.json",
@@ -19,8 +21,8 @@
   "keyset_keys_metadata_path": "keyset_keys/metadata.json",
   "aws_access_key_id": "no access key needed for test",
   "aws_secret_access_key": "no secret key needed for test",
-  "client_side_keypair_public_prefix": "UID2-X-T-",
-  "client_side_keypair_private_prefix": "UID2-Y-T-",
+  "client_side_keypair_public_prefix": "UID2-X-L-",
+  "client_side_keypair_private_prefix": "UID2-Y-L-",
   "client_key_prefix": "UID2-C-L-",
   "operator_key_prefix": "UID2-O-L-",
   "admin_key_prefix": "UID2-A-L-",
