--- a/pom.xml
+++ b/pom.xml
@@ -16,22 +16,22 @@
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>5.3.6-e4c068510c</uid2-shared.version>
+        <uid2-shared.version>5.6.2-SNAPSHOT</uid2-shared.version>
         <image.version>${project.version}</image.version>
     </properties>
-      <repositories>
+    <repositories>
         <repository>
-          <id>maven-snapshots</id>
-          <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
-          <layout>default</layout>
+            <id>maven-snapshots</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+            <layout>default</layout>
             <releases>
-              <enabled>false</enabled>
+                <enabled>false</enabled>
             </releases>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
-      </repositories>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
