Adding the ability to edit service and service links

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <!-- check micrometer.version vertx-micrometer-metrics consumes before bumping up -->
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-        <uid2-shared.version>5.3.6-e4c068510c</uid2-shared.version>
+        <uid2-shared.version>5.4.3-SNAPSHOT</uid2-shared.version>
         <image.version>${project.version}</image.version>
     </properties>
       <repositories>
