Updated Trivy secret scanning ignore rule

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,4 +12,6 @@ repos:
           - /src/target
           - --skip-dirs
           - /src/.idea
+          - --skip-files
+          - src/main/resources/localstack/kms/seed.yaml
           - .
