--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <micrometer.version>1.1.0</micrometer.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
         <uid2-shared.version>6.0.0-c7abb59c26</uid2-shared.version>
+        <okta-jwt.version>0.5.7</okta-jwt.version>
         <image.version>${project.version}</image.version>
     </properties>
     <repositories>
@@ -128,6 +129,18 @@
             <artifactId>instancio-junit</artifactId>
             <version>2.11.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.okta.jwt</groupId>
+            <artifactId>okta-jwt-verifier</artifactId>
+            <version>${okta-jwt.version}</version>
+        </dependency>
+    
+        <dependency>
+            <groupId>com.okta.jwt</groupId>
+            <artifactId>okta-jwt-verifier-impl</artifactId>
+            <version>${okta-jwt.version}</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
