--- a/conf/local-e2e-docker-config.json
+++ b/conf/local-e2e-docker-config.json
@@ -33,8 +33,12 @@
   "salt_snapshot_activates_in_seconds": 180,
   "salt_snapshot_expires_after_seconds": 180000,
   "is_auth_disabled": true,
-  "oauth2_callback_url": "http://localhost:8089/oauth2-callback",
-  "github_client_id": "generate client id",
-  "github_client_secret": "generate client secret",
-  "enable_keysets": true
+  "enable_keysets": true,
+  "okta_client_id": "0oa1ok419hd6kbKJZ1d8",
+  "okta_client_secret": "GET_FROM_1PASSWORD",
+  "okta_auth_server": "https://uid2.okta.com/oauth2/aus1oqu660mF7W3hi1d8",
+  "okta_audience": "https://api.admin.com/api",
+  "okta_callback": "http://localhost:8089/oauth2-callback",
+  "environment": "local",
+  "vertx_session_timeout": 32400000
 }
