[CI Pipeline] Released Patch version: 5.2.7-484d5c4666

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.uid2</groupId>
     <artifactId>uid2-admin</artifactId>
-    <version>5.2.5-SNAPSHOT</version>
+    <version>5.2.7-484d5c4666</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
