--- a/trivy-secret.yaml
+++ b/trivy-secret.yaml
@@ -208,3 +208,8 @@ disable-allow-rules:
   - rubygems
   - wordpress
   - anaconda-log
+
+allow-rules:
+  - id: skip-localstack-kms-seed
+    description: Skip localstack KMS seed files
+    path: /*/seed.yaml
