Extended path for localstack seed.yaml

--- a/trivy-secret.yaml
+++ b/trivy-secret.yaml
@@ -212,4 +212,4 @@ disable-allow-rules:
 allow-rules:
   - id: skip-localstack-kms-seed
     description: Skip localstack KMS seed files
-    path: /*/seed.yaml
+    path: /*/localstack/kms/seed.yaml
