Update docker base images

--- a/.github/workflows/release-docker-image.yaml
+++ b/.github/workflows/release-docker-image.yaml
@@ -25,4 +25,5 @@ jobs:
     with: 
       release_type: ${{ inputs.release_type }}
       vulnerability_severity: ${{ inputs.vulnerability_severity }}
+      java_version: 21
     secrets: inherit
