Fixed json syntax highlight code and added tests

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -7,3 +7,20 @@ jobs:
     with:
       java_version: 21
     secrets: inherit
+
+  javascript-tests:
+    name: JavaScript Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Run JavaScript tests
+        run: |
+          cd webroot/js/test
+          node --test *.test.mjs
